# LambdaNN

./: .gitignore  Learning Human Movements.tex  Learning Humman Movements.tex  README.md  Research Proposal.tex  cmds.hs  lambdaNN.cabal  main.hs  references.bib
Extra/: row_blooper1.amc  row_blooper2.amc  row_blooper3.amc  row_blooper4.amc  row_blooper5.amc  rowing.amc  rowing_2.amc  rowing_3.amc  simple_walk.amc  swim.amc  swim_1.amc
Reservoir/: Learning.hs  LearningUtils.hs  Reservoir.hs
Tests/Henon/: TestHenon.hs  testHenon.hs
Tests/Simple/: testSine.hs
