name:              lambdaNN
version:           0.1
license:           BSD3
license-file:      LICENSE
author:            Ernesto Rodríguez <neto@netogallo.me>
maintainer:        Ernesto Rodríguez <neto@netogallo.me>
synopsis:          Echo state neural networks for Haskell.
description:       Echo state neural networks for Haskell.
category:          Machine Learning
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple
homepage:          http://tersus.yesodweb.com/

library
    exposed-modules: Reservoir.Reservoir

    extensions: TemplateHaskell

    build-depends: base                          >= 4          && < 5
                   ,hmatrix                      >= 0.14.1.0
                   ,MissingH                     >= 1.2.0.0
                   ,random                       >= 1.0.0.0
                   ,random-extras                >= 0.17
                   ,random-source                >= 0.3.0.0
                   ,rvar                         >= 0.2.0.0

executable         lambdaNN

    main-is:           ../main.hs
    hs-source-dirs:    dist
    build-depends:     base
                     , lambdaNN                     
