name:              lambdaNN
version:           0.1
license:           BSD3
license-file:      LICENSE
author:            Ernesto Rodríguez <neto@netogallo.me>
maintainer:        Ernesto Rodríguez <neto@netogallo.me>
synopsis:          Echo state neural networks for Haskell.
description:       Echo state neural networks for Haskell.
category:          Machine Learning
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple
homepage:          http://netowork.me
Description:
    This is a Echo State Neural Network library for Haskell.

    Echo state networks are a powerful learning algorithm
    to learn chaotic time series. They can easliy adapt
    to many different time series by tuning very few
    parameters.

    This library includes various different methods to
    train Echo State Networks and utilities to visualize
    the networks to further optimize their performance.
    Custom algorithms can be built on top of this library.

library
    exposed-modules: Reservoir.Reservoir
                     Reservoir.Learning
                     Reservoir.LearningUtils

    extensions: TemplateHaskell

    build-depends: base                          >= 4          && < 5
                   ,hmatrix                      >= 0.14.1.0
                   ,MissingH                     >= 1.2.0.0
                   ,random                       >= 1.0.0.0
                   ,random-fu
                   ,random-extras                >= 0.17
                   ,random-source                >= 0.3.0.0
                   ,rvar                         >= 0.2.0.0
                   ,gnuplot                      >= 0.5.1
                   ,vector                       >= 0.10.0.0
                   ,parallel                     >= 3.2.0.3

executable         lambdaNN

    main-is:           ../Tests/Henon/TestHenon.hs
    hs-source-dirs:    dist
    build-depends:     base
                     , lambdaNN
                     , gnuplot
                     , vector
                     , hmatrix
